<resources>
    <string name="app_name">Employee Report</string>
    <string name="action_Delete">Delete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="star">+</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="call">Call</string>
    <string name="add_profile_photo">Add Profile photo</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nick_name">Department Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Add Employee</string>
    <string name="add_profile_update_photo">Add Profile / Update Photo</string>
    <string name="phone_book">Employee Report </string>
    <string name="addBasePont">Base Point</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="btn_forget_password">Forget Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="btn_link_to_login">Already registered.Login Me!</string>
    <string name="lbl_forget_password">Forget Password</string>
    <string name="forgot_password_msg">We just need your registered to send link</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="minimum_pass">Password To Short</string>
    <string name="auth_failed">Authentication Failed</string>

</resources>